Add board labels and image lightbox
